Fix overflowing select

--- a/KlimaKar/static/css/styles.css
+++ b/KlimaKar/static/css/styles.css
@@ -66,6 +66,10 @@ div.content-full {
     }
 }
 
+#status-select.btn-group {
+    flex-wrap: wrap;
+}
+
 @media screen and (max-width: 768px) {
     .container-fluid {
         padding: 0;
